# prose

./: .gitignore  .ocamlformat-ignore  README.md  dune-project  prose.opam
examples/: .#expressions.sess  auth.ctx  benchmark.txt  conditional.sess  dice.ctx  dice.sess  different-sort.ctx  dining.ctx  expressions.sess  fact_10.ctx  fact_10.sess  fact_11.ctx  fact_11.sess  fact_12.ctx  fact_12.sess  fact_13.ctx  fact_13.sess  fact_14.ctx  fact_14.sess  fact_3.ctx  fact_3.sess  fair-deadlock.ctx  fair-merge.ctx  flip.sess  gen_dining.py  gen_fact_n_ctx.py  gen_fact_n_sess.py  jake.ctx  leader-election.ctx  livelock.ctx  lossy-channel.ctx  mdp.ctx  monty-hall-change.ctx  monty-hall-stay.ctx  more-choices.ctx  multiparty-workers.ctx  multiparty.sess  non-terminating.ctx  nondet-liveness.ctx  nondeterminism.ctx  (+25 more)
experiments/: benchmark.sh  dining_scaling.sh  factorials.sh  plot_factorial_results.py  stats.py
lib/: action.ml  action.mli  ast.ml  display_stats.ml  display_stats.mli  dune  gen_labels.ml  gen_labels.mli  gen_props.ml  gen_props.mli  label.ml  label.mli  lexer.mll  live.ml  live.mli  microbenchmark.ml  microbenchmark.mli  parser.mly  printer.ml  printer.mli  prism.ml  prose.ml  prose.mli  psl.ml  psl.mli  session_env.ml  session_env.mli  session_lexer.mll  session_parser.mly  transform.ml  transform.mli  translate.ml  translate.mli  translate_session.ml  translate_session.mli  type_utils.ml  type_utils.mli  well_formed.ml  well_formed.mli
promt/: README.md  promt.cabal
promt/app/: Main.hs
promt/examples/: check_demo.promt  dining.promt  if-factorization.promt  nested-bra.promt  nested-flip-ifs.promt  workers.promt
promt/src/Frontend/: Parser.hs
promt/src/Normalize/: Passes.hs
promt/src/Output/: Prose.hs
promt/src/Syntax/: Binder.hs  Process.hs  RegularTree.hs  WellFormed.hs
promt/src/Typing/: Check.hs  Infer.hs  Pretty.hs  Subtype.hs  Types.hs
promt/test/: Spec.hs
promt/test/Examples/: DiningPhilosophers.hs  Tricky.hs
test/: dune  run-examples.t
